selecting a NewMessageWindow now selects either the to: field, the subject:
field, or the text body, depending on which ones are filled out.

changed the display algorithm so that several messages are loaded
before the folder window itself is shown.

made it so exiting pooka before all the messages are loaded doesn't result
in a bunch of exceptions.

improved the startup time, so that open folders show up more quickly.

fixed the popup menu on the attachment pane so that it shows up in the
right place (and isn't selected by default when you right click and 
release).  fixed a similar problem with the nodes in the Folder Tree.

fixed the keybindings in preview pane mode.

020429 release
--------------

fixed a NPE that could happen when switching from preview pane mode to
desktop pane mode.

fixed some minor bugs involving detaching windows.

fixed the theme support so that the default theme is actually used for
just about everything.

fixed a bug where finding the first unread message was done on the 
awt event thread instead of the FolderThread.

fixed pooka so that the default image and text viewers that come with
javamail will actually work when you double click on an attachment.

preview pane mode now gives a resonable size for the message table.

nested subfolders were not being cached when in disconnected imap mode.

fixed a bug where responding or forwarding a message with a null subject
would result in a NullPointerException

fixed a bug where multiple messages could not be copied between folders

changed the load message tracker to synchronize on the folder thread.

fixed a problem where a second request for an invalid message would
result in an empty window.

fixed the status messages so that they should be cleared properly.

fixed disconnected imap autocaching. 

caching messages when using disconnected imap no longer marks the messages
as read.

made some implementation changes to the way that disconnected imap folders